--- a/src/app/zad1516komponent1/zad15komponent1.component.html
+++ b/src/app/zad1516komponent1/zad15komponent1.component.html
@@ -1,4 +1,4 @@
-<p>Zadanie 15 - komponent 1 </p>
+<p>Zadanie 15 i 16 - komponent 1 </p>
 <ul class="heroes">
     <li *ngFor="let link of links"
         [class.selected]="link === selectedLink"
