--- a/src/app/zad17komponent1/zad17komponent1.component.scss
+++ b/src/app/zad17komponent1/zad17komponent1.component.scss
@@ -1,5 +1,4 @@
 #divBlue{
-  background-color: cornflowerblue;
   width: 50%;
   height: 500px;
   float: right;
@@ -7,7 +6,16 @@
 
 #left{
   float:left;
-  background-color: red;
   width: 50%;
   height: 500px;
+}
+
+.bg-color{
+  background-color: aqua;
+  width: 120px;
+  height: 100px;
+}
+
+img{
+  margin: 10px;
 }
