--- a/src/app/zad21_24i27komponent/zad21_24komponent1/zad21_24komponent1.component.html
+++ b/src/app/zad21_24i27komponent/zad21_24komponent1/zad21_24komponent1.component.html
@@ -1,31 +1,31 @@
 <p>Zadanie 21-24 - komponent 1 </p>
 <ul class="heroes">
-    <li *ngFor="let link of links"
+    <li *ngFor="let link of linksService.links"
         [class.selected]="link === selectedLink"
         (click)="onSelect(link)">
         <span class="badge">{{link.name}}</span> {{link.linkAddres}} <span class="usun"><button (click) = "potwierdzUsuniecie(link)">usun</button></span>
     </li>
 </ul>
 
-<h2>Dodanie nowego linku:</h2>
-<div id="addLinkInp">
+<h2 *ngIf="router.url === 'dodaj'">Dodanie nowego linku:</h2>
+<div *ngIf="router.url === 'dodaj'" id="addLinkInp">
     <label>Wprowadz nazwe: <input [(ngModel)]="name" type="text"></label><br><br>
     <label>Wprowadz adres: <input [(ngModel)]="adres" type="text"></label><br><br>
     <label>Wprowadz opis: <input [(ngModel)]="opis" type="text"></label><br><br>
     
 </div>
-<p id="czyWszystkiePola" style="color: red;"></p>
+<p *ngIf="router.url === 'dodaj'" id="czyWszystkiePola" style="color: red;"></p>
 
-<button (click)="addLink()" [disabled]="!checkInputs()" type="button">Zapisz</button>
-<button (click)="clear()" type="button">Anuluj</button><br><br>
+<button *ngIf="router.url === 'dodaj'"  (click)="addLink()" [disabled]="!checkInputs()" type="button">Zapisz</button>
+<button  *ngIf="router.url === 'dodaj'" (click)="clear()" type="button">Anuluj</button><br><br>
 
-<h2>Edycja opisu:</h2>
-<div id="opisForm">
+<h2 *ngIf="router.url === 'edytuj'">Edycja opisu:</h2>
+<div *ngIf="router.url === 'edytuj'" id="opisForm">
     <label>Wpisz nazwe linku ktorego opis chcesz zmienic: <input id="nazwaWpisanegoAdresu" type="text"></label><br><br>
     <label>Nowy opis: <input [(ngModel)]="zmienOpis" type="text"></label><br><br>
 </div>
-<p id="czyOpisZostalZmieniony" style="color: red;"></p>
-<button (click)="changeDescription()" type="button">Zmien</button>
+<p *ngIf="router.url === 'edytuj'" id="czyOpisZostalZmieniony" style="color: red;"></p>
+<button *ngIf="router.url === 'edytuj'" (click)="changeDescription()" type="button">Zmien</button>
 
 
 
